# frogger

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
src/: configuration.cc  configuration.hpp  main.cc  property.cc  property.hpp
src/engine/: window.cc  window.hpp
src/game/: animation.cc  animation.hpp  board.cc  board.hpp  gameplay.cc  gameplay.hpp  interface.cc  interface.hpp  node.cc  node.hpp  sprite.cc  sprite.hpp  tile.cc  tile.hpp  utility.cc  utility.hpp
src/game/symbols/: car.hpp  frog.hpp  lily.hpp  log.hpp
src/interface/: credit.cc  credit.hpp  game.cc  game.hpp  menu.cc  menu.hpp  setting.cc  setting.hpp
src/utility/: configuration.cc  configuration.hpp  property.cc  property.hpp
